// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`range [snapshot] > default 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_85_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_86_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="0"
          aria-valuetext="0"
          id="base-ui-_r_87_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="0"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_89_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="100"
          aria-valuetext="100"
          id="base-ui-_r_8a_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`range [snapshot] > disabled 1`] = `
<div
  class="vesper-range"
  data-disabled=""
  data-orientation="horizontal"
  id="base-ui-_r_9e_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-disabled=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-disabled=""
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-disabled=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-disabled=""
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_9f_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="0"
          aria-valuetext="0"
          disabled=""
          id="base-ui-_r_9g_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="0"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-disabled=""
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_9i_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="100"
          aria-valuetext="100"
          disabled=""
          id="base-ui-_r_9j_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`range [snapshot] > with custom min/max/step 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_8c_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_8d_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="0"
          aria-valuetext="0"
          id="base-ui-_r_8e_"
          max="10"
          min="0"
          step="2"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="0"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_8g_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="10"
          aria-valuetext="10"
          id="base-ui-_r_8h_"
          max="10"
          min="0"
          step="2"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="10"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`range [snapshot] > with multiple values 1`] = `
<div
  class="vesper-range vesper-range-labeled"
  data-orientation="horizontal"
  id="base-ui-_r_91_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_92_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "A";"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="20"
          aria-valuetext="A"
          id="base-ui-_r_93_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="20"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_95_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "B";"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="40"
          aria-valuetext="B"
          id="base-ui-_r_96_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="40"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="2"
        data-orientation="horizontal"
        id="base-ui-_r_98_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "C";"
      >
        <input
          aria-orientation="horizontal"
          aria-valuenow="60"
          aria-valuetext="C"
          id="base-ui-_r_99_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="60"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="3"
        data-orientation="horizontal"
        id="base-ui-_r_9b_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "D";"
      >
        <input
          aria-orientation="horizontal"
          aria-valuenow="80"
          aria-valuetext="D"
          id="base-ui-_r_9c_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="80"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`range [snapshot] > with ticks 1`] = `
<div
  class="vesper-range"
  data-orientation="horizontal"
  id="base-ui-_r_8j_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.2;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.4;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.6;"
      />
      <span
        class="vesper-range-tick"
        style="--vesper-range-tick-position: 0.8;"
      />
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_8k_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="0"
          aria-valuetext="0"
          id="base-ui-_r_8l_"
          max="5"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="0"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_8n_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden;"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="5"
          aria-valuetext="5"
          id="base-ui-_r_8o_"
          max="5"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`range [snapshot] > with value labels 1`] = `
<div
  class="vesper-range vesper-range-labeled"
  data-orientation="horizontal"
  id="base-ui-_r_8q_"
  role="group"
>
  <div
    data-base-ui-slider-control=""
    data-orientation="horizontal"
  >
    <div
      class="vesper-range-track"
      data-orientation="horizontal"
      style="position: relative;"
    >
      <div
        class="vesper-range-range"
        data-base-ui-slider-indicator=""
        data-orientation="horizontal"
        style="visibility: hidden; position: relative; height: inherit; --start-position: 0%; --relative-size: 0%; inset-inline-start: var(--start-position); width: var(--relative-size);"
      />
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_8r_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "Min";"
      >
        <input
          aria-label="Range (min)"
          aria-orientation="horizontal"
          aria-valuenow="0"
          aria-valuetext="Min"
          id="base-ui-_r_8s_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="0"
        />
      </div>
      <div
        class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
        data-index="1"
        data-orientation="horizontal"
        id="base-ui-_r_8u_"
        style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 0%; visibility: hidden; --vesper-range-thumb-label: "Max";"
      >
        <input
          aria-label="Range (max)"
          aria-orientation="horizontal"
          aria-valuenow="100"
          aria-valuetext="Max"
          id="base-ui-_r_8v_"
          max="100"
          min="0"
          step="1"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
          type="range"
          value="100"
        />
      </div>
    </div>
  </div>
</div>
`;
